# WORK

./: .gitignore  CMakeLists.txt  Makefile  README.txt
CMAKE-STUDY/: CMakeLists.txt  Message.cpp  Message.hpp  hello-world.cpp
GLSDKs/: BL_glctx.c  BL_glctx.h  BL_glxctx.c  BL_glxctx.h  README-GLSDKs.txt  makefile
UT/: c.err  containers.cc  diag.cc  futils.cc  makefile  putils.cc
UTData/: blue_dot_centers.csv  blue_dot_segIDs.csv  counters.csv  red_dot_centers.csv  red_dot_segIDs.csv
UTGLSDKs/: test1  test1.cc
UTbase_c/: crc.cc  makefile  ringbuffer.cc  serialportconf.cc
UTbase_cg/: makefile  oomesh.cc  viewer0.cc
UTbase_g/: 3D.cc  CMakeLists.txt  Makefile  c.err  cmake_install.cmake  discriminate.cc  distortion.cc  interp.cc  intersect.cc  invremap.cc  makefile  makefile.old  mat.cc  mesh.cc  testdefs.h  texture.cc  twolines.cc
UTbase_l/: CMakeLists.txt  Makefile  cmake_install.cmake  containers.cc  diag.cc  futils.cc  json.cc  json2.cc  makefile  putils.cc  rational.cc  rationalfunc.cc  test_defs.h
UTbase_o/: CMakeLists.txt  c.err  dfo.cc  enable_items.h  lagrange_mult.cc  linesearch.cc  makefile  nelder1.cc  optc.cc  penalty0.cc
UTbase_z/: CMakeLists.txt  IO2.cc  multisection.cc  styz.cc
apps/: makefile
base_c/: APP_packet0.c  APP_packet0.h  BL_crc.c  BL_crc.h  BL_packet.c  BL_packet.h  BL_packethandler.c  BL_packethandler.h  BL_ringbuffer.c  BL_ringbuffer.h  BL_serialportconf.cc  BL_serialportconf.h  README.txt  makefile  temp.txt
base_cg/: BL_die.cc  BL_die.h  BL_glctx.c  BL_glctx.h  BL_glsurface.h  BL_glutils.c  BL_glutils.h  BL_oomesh.c  BL_oomesh.h  BL_puregeo.h  BL_tristrip.c  BL_tristrip.h  README_base_cg.txt  makefile
base_g/: BL_3Dcylinder.c  BL_3Dcylinder.h  BL_3Dline.c  BL_3Dline.h  BL_3Dmathobject.h  BL_3Dplane.c  BL_3Dplane.h  BL_bilinearinterp.c  BL_bilinearinterp.h  BL_discriminate.c  BL_discriminate.h  BL_dist.h  BL_distortion.c  BL_distortion.h  BL_fisheye.h  BL_intersect.c  BL_intersect.h  BL_invremap.c  BL_invremap.h  BL_invremap_testgen.c  BL_invremap_testgen.h  BL_mat.c  BL_matexport.h  BL_mesh.c  BL_mesh.h  BL_plate.c  BL_plate.h  BL_see_triangle.h  BL_texmesh.c  BL_texmesh.h  BL_texture.cc  BL_texture.h  BL_twolines.c  BL_twolines.h  CMakeLists.txt  Makefile  c.err  catmacro.h  cmake_install.cmake  globaldefc128CM.h  (+16 more)
base_l/: BL_base.h  BL_containers.c  BL_containers.h  BL_data2D.c  BL_data2D.h  BL_debutil.c  BL_debutil.h  BL_diag.c  BL_diag.h  BL_errno.h  BL_fsm.c  BL_fsm.h  BL_futils.c  BL_futils.h  BL_json.c  BL_json.h  BL_locker.c  BL_locker.h  BL_loggerbase.c  BL_loggerbase.h  BL_putils.c  BL_putils.h  BL_rational.c  BL_rational.h  BL_rationalfunc.c  BL_rationalfunc.h  BL_serializebase.c  BL_serializebase.h  BL_types.h  CMakeLists.txt  Makefile  README.txt  c.err  cmake_install.cmake  makefile
base_o/: BL_cg.c  BL_cg.h  BL_constraint.c  BL_constraint.h  BL_dfo.c  BL_dfo.h  BL_gradient.c  BL_gradient.h  BL_linesearch.c  BL_linesearch.h  Makefile  (+17 more)
(+37 files in other folders)
